--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "description": "",
   "dependencies": {
     "@hapi/hapi": "^21.3.12",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
+    "@hapi/vision": "^7.0.3",
     "@supabase/supabase-js": "^2.45.0",
     "dotenv": "^16.5.0",
+    "hapi-swagger": "^17.3.2",
     "joi": "^17.13.3"
   },
   "devDependencies": {
